0.13
 - Add Value::Lexeme to Wikibase::Datatype::Struct doc.
 - Add flag 'add' => '' to Form and Sense as information to create Form or
   Sense.
 - Add obj2struct() and struct2obj() for main objects to
   Wikibase::Datatype::Struct.
 - Fix id in Form::obj2struct().
 - Fix id in Sense::obj2struct().
 - Regen examples.

0.12 2023-10-27T23:15:03+02:00
 - Add Value::Lexeme.
 - Update Module::Install to 1.21 version.

0.11 2023-04-24T18:45:00+02:00
 - Fix dependency to Wikibase::Datatype::Value::Sense.
 - Fix example in Wikibase::Datatype::Struct::Language.
 - Fix Mediainfo examples.
 - Improve Struct documentation.
 - Rewrite to use example names.

0.10 2023-04-23T10:51:08+02:00
 - Add references to MediainfoStatement.
 - Add Sense object.
 - Add support for sense to Value.
 - Fix dependencies.
 - Fix doc descriptions.
 - Fix test dependencies.
 - Update copyright years.

0.09 2022-07-09T16:51:15+02:00
 - Add complex test to Lexeme.
 - Add missing id and page_id Lexeme values to obj2struct().
 - Add Property object.
 - Fix Lexeme default ns.
 - Fix Lexeme language conversion.
 - Fix Lexeme lexical category conversion.
 - Fix Lexeme struct2obj(), was very bad.
 - Fix sentence in doc in Value::Globecoordinate.
 - Unify LICENSE AND COPYRIGHT section in doc.
 - Update copyright years.

0.08 2021-02-09T18:12:14+01:00
 - Add tests for Value::Item.
 - Improve check in Value::Item::struct2obj().
 - Improve check in Value::Property::struct2obj().
 - Update copyright years.
 - Use type() method in Value::Property instead of hardcoded string.

0.07 2021-01-27T01:43:29+01:00
 - Add support for Mediainfo.
 - Add support for MediainfoSnak.
 - Add support for MediainfoStatement.
 - Add support for id parameter and method in Statement.
 - Rewrite Utils to abstract Snak way.
 - Update examples/ dir.

0.06 2021-01-14T19:16:36+01:00
 - Add Lexeme.
 - Add test for globe coordinate with negative value.
 - Fix JSON null in perl structure.
 - Fix doc for Item (missing error).